@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (future 6.0.3, SVN branch-6-0):
 ---------------------------
 
+- Added MS_CJC_* constants in PHP/MapScript (#4183)
+
 - Fixed Memory leak with fribidi strings (#4188)
 
 - Added missing properties in styleObj setter of PHP/MapScript (#3901)
